Finished version 1.1.0-beta